Add beautiful cuda path
and filthy freeimage path

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,25 +1,25 @@
 add_executable(HelloWorldExe HelloWorld.cpp file.cpp)
 find_library(OPENCL_LIB 
 	NAMES OpenCL
-	PATHS "$ENV{AMDAPPSDKROOT}/lib/x86"
+	PATHS "$ENV{AMDAPPSDKROOT}/lib/x86" "$ENV{CUDA_PATH}/lib/Win32"
 	)
 target_link_libraries (HelloWorldExe ${OPENCL_LIB})
 find_path(OPENCL_INC
 	NAMES "CL/cl.h"
-	PATHS "$ENV{AMDAPPSDKROOT}/include"
+	PATHS "$ENV{AMDAPPSDKROOT}/include" "$ENV{CUDA_PATH}/include"
 )
 
 include_directories("${OPENCL_INC}")
 
 find_path(FREEIMAGE_INC
 	NAMES "FreeImage.h"
-	PATHS "${FREEIMAGE_ROOT}/Dist"
+	PATHS "${FREEIMAGE_ROOT}/Dist" "C:/FreeImage/Dist"
 )
 include_directories("${FREEIMAGE_INC}")
 
 find_library(FREEIMAGE_LIB
 	NAMES FreeImage freeimage
-	PATHS "${FREEIMAGE_ROOT}/Dist"
+	PATHS "${FREEIMAGE_ROOT}/Dist" "C:/FreeImage/Dist"
 )
 target_link_libraries (HelloWorldExe ${FREEIMAGE_LIB})
 
