--- a/.travis.yml
+++ b/.travis.yml
@@ -7,4 +7,4 @@ branches:
 
 before_install:
  - sudo apt-get update -qq
- - sudo apt-get install -qq libfreeimage-dev nvidia-opencl-dev
+ - sudo apt-get install -qq libfreeimage-dev nvidia-opencl-dev libopencv-dev
