CMake - build without JAI camera

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -36,12 +36,19 @@ find_path(JAI_INC
 	NAMES "Jai_Factory.h"
 	PATHS "C:/Programy/JAI/SDK/library/CPP/include"
 	)
-include_directories("${JAI_INC}")
+
 find_library(Jai_Factory_Lib
 	NAMES Jai_Factory
 	PATHS "C:/Programy/JAI/SDK/library/CPP/lib/Win32_i86"
 	)
-target_link_libraries (HelloWorldExe ${Jai_Factory_Lib})
+
+if(NOT "${JAI_INC}")
+  add_definitions(-DNO_JAI_CAMERA)
+else(NOT "${JAI_INC}")
+  include_directories("${JAI_INC}")
+  target_link_libraries (HelloWorldExe ${Jai_Factory_Lib})
+endif(NOT "${JAI_INC}")
+
 find_library(OPENCV_CALIB3D_LIB
 		NAMES opencv_calib3d246 opencv_calib3d
 		PATHS "$ENV{OPENCV_DIR}/build/x86/vc11/lib"
@@ -66,4 +73,6 @@ target_link_libraries (HelloWorldExe ${OPENCV_HIGHGUI_LIB})
 if(${UNIX})
 	set(CMAKE_CXX_FLAGS "-std=c++11")
 endif(${UNIX})
+
+include_directories("${PROJECT_BINARY_DIR}/include")
 
