--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -70,11 +70,13 @@ target_link_libraries (HelloWorldExe ${OPENCV_CALIB3D_LIB})
 target_link_libraries (HelloWorldExe ${OPENCV_HIGHGUI_LIB})
 	
 
-set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall -Wextra -Werror")
-set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -Wall -Wextra -Werror")
-if(${UNIX})
-	set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")
-endif(${UNIX})
+set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall")
+set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -Wall")
+
+if(CMAKE_COMPILER_IS_GNUCXX)
+	set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wextra -Werror -std=c++11")
+	set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -Wextra -Werror")
+endif(CMAKE_COMPILER_IS_GNUCXX)
 
 include_directories("${PROJECT_BINARY_DIR}/include")
 
